# imagesmacker

./: .gitattributes  .gitignore  demo.html  justfile  mypy.ini  pyproject.toml
.github/workflows/: publish.yml
dev/: autodoc.mustache
dev/docs/handbook/: data-field-format.md
dev/scripts/py/: dev.py
dev/scripts/py/text/: en.json
dev/scripts/py/values/: cli.yaml
dev/tpl/pdoc3/: config.mako  text.mako  text_base.mako
dev/values/constants/: main.yaml
dev/values/others/: license-report.json
docs/: README.md  TODO.md  changelog.md
docs/.obsidian/: app.json  workspace.json
docs/api/4.0.0/: draw.md  fields.md  image.md  index.md
docs/api/4.0.0/dev/algorithms/: text-fitting.md
docs/api/4.0.0/dev/handbook/: drawing-text.md
docs/api/4.0.0/models/: coordinates.md  draw.md  fields.md
docs/api/5.0.0/: draw.md  index.md
docs/api/5.0.0/dev/: specifications.md
docs/api/5.0.0/dev/handbook/: coordinates.md
docs/api/5.0.0/models/: draw.md  fields.md
docs/api/unreleased/: exceptions.md  fonts.md  utils.md
docs/api/unreleased/models/: coordinates.md  index.md
docs/dev/: bump.md  optimizations-proposal.md
docs/developer ramblings/: README.md  TODO.md  What's Wrong Right Now.md  draw-text-shenanigans.md  whats wrong right now.md  whats-wrong-right-now.md
docs/examples/: README.md
docs/handbook/: coordinates.md  data-field-format.md  document.md  text-anchors.md  text.md  usage.md
examples/: 01_coordinates.py  02_text.py  03_multiline_text.py  04_inverted_text.py  05_inverted_multiline_text.py  06_QR_code.py  07_Code128.py  08_fields.py  09_image.py
imagesmacker/: draw.py  exceptions.py  fields.py  fonts.py  utils.py
imagesmacker/models/: coordinates.py  draw.py  fields.py
imagesmacker_copy/: draw.py  fields.py  fonts.py  utils.py
test/: fit_text.py  multiline_text.py  sample_image.py  text_anchors.py  text_anchors_inverted.py  text_anchors_inverted_multiline.py  text_anchors_multiline.py
