[project]
name = "imagesmacker"
license = "MIT"
version = "5.0.0"
description = "None"
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = [
    "alltheutils>=3.0.1",
    "pillow>=10.0.1",
    "pydantic>=2.10.6",
    "python-barcode>=0.15.1",
    "qrcode[pil]>=7.4.2",
    "tomlkit>=0.13.2",
]
maintainers = [
    { name = "whinyaan", email = "whinyaan@disroot.org" },
]
keywords = ["utility"]
classifiers=[
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities"
]

[project.urls]
homepage = "https://python-poetry.org/"
repository = "https://github.com/whinee/AllTheUtils"
documentation = "https://github.com/whinee/AllTheUtils/tree/main/docs"
"Bug Tracker" = "https://github.com/whinee/AllTheUtils/issues"


[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "no-implicit-optional>=1.4",
    "pdoc3>=0.11.5",
    "rich>=13.9.4",
    "ruff>=0.9.6",
    "scalene>=1.5.51",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64"]

[tool.setuptools.packages.find]
include = ["imagesmacker*", "imagesmacker.models*"]

[tool.uv]
default-groups = ["dev"]
package = true

[tool.mypy]
disable_error_code = [
    "import",
    "annotation-unchecked",
    "attr-defined",
    "no-untyped-call",
    "no-untyped-def",
    "type-arg",
    "unused-ignore",
]
strict = true
exclude = "dev"

[tool.ruff]
line-length = 88

target-version = "py311"

[tool.ruff.lint]
select = [
    "ANN",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "D",
    # "DTZ",
    "E",
    "F",
    "I",
    "INP",
    "N",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "UP"
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "ANN",
    "B",
    "C4",
    "COM",
    "D",
    "E",
    "F",
    "I",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "UP"
]
unfixable = []

ignore = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN401",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
    "D203",
    "D212",
    "D401",
    "D406",
    "D407",
    "D417",
    "E501",
    "I002",
    "N812",
    "N818",
    "RET503",
    "S101",
    "UP007",
    "UP032",
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "pyenv",
    "venv",
]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = false

[tool.ruff.lint.per-file-ignores]
"examples/*" = [
    "INP001",
    "N999"
]